# Object-Animation

./: CMakeLists.txt  README.txt  main.cpp
Complex Objects/: Lamp.cpp  Lamp.h  MerryGoRound.cpp  MerryGoRound.h  Raindrop.cpp  Raindrop.h
Simple Objects/: Cylinder.cpp  Cylinder.h  Sphere.cpp  Sphere.h  Torus.cpp  Torus.h
